<resources>
    <string name="app_name">Diploma Helper</string>
    <string name="diplomahelper_gmail_com">diplomahelper@gmail.com</string>
    <string name="firebase_database_url">https://diploma-helper-1567a-default-rtdb.firebaseio.com</string>
    <string name="google_storage_bucket">diploma-helper-1567a.appspot.com</string>
    <string name="default_web_client_id">577569224794-9ijc75has8kfcm24mcq1m3bb7somch7o.apps.googleusercontent.com</string>
    <string name="gcm_defaultSenderId">577569224794</string>
    <string name="google_api_key">AIzaSyAY_71PpD_HIsvoZZ61glIk91luVB9Kjgg</string>
    <string name="google_app_id">1:577569224794:android:f430fa216536c38d524063</string>
    <string name="google_crash_reporting_api_key">AIzaSyAY_71PpD_HIsvoZZ61glIk91luVB9Kjgg</string>
    <string name="strTotalPrice"><![CDATA[<del>This is strikethrough text</del>]]></string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_send_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn’t receive the OTP?</string>
    <string name="errEmptyTitle">Please enter a valid mobile number</string>
    <string name="gender_prompt">Select Gender</string>
    <string name="Intro1">An internship is a period of work experience offered by an organization for a limited time. Internships can be paid or unpaid and may be full-time or part-time.</string>
    <string name="Intro2">Organizations provide internships to help individuals learn about specific industries and gain practical skills, making them a great way to gain experience.</string>
    <string name="_1234567890">1234567890</string>
    <string name="_91">+91</string>
    <string name="action_settings">Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="uptxt">Hi, If You have any Diploma Related Study Materials/Syllabus/Question Papers, You can send Us !!</string>
    <string name="verify">Verify</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
</resources>