<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/mo_number_gif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/josefinsans_bold"
                android:text="OTP Verification"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/enter_mobile_number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/background_boxes_otp_activity"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/_91"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_mobile_number_et"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:autofillHints="phone"
                    android:background="@null"
                    android:elevation="0dp"
                    android:gravity="center"
                    android:hint="@string/_1234567890"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="auto"
                    android:inputType="number"
                    android:maxEms="10"
                    android:maxLength="10"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/activity_mobile_number_btn_getotp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="30dp"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/get_otp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
