<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_margin="20dp"
                android:background="@drawable/otp_gif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/josefinsans_bold"
                android:text="OTP Verification"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:text="@string/enter_the_otp_send_to"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/activity_otp_tv_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="+919420716711"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/activity_otp_et_otp1"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/background_boxes_otp_activity"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="auto"
                    android:inputType="number"
                    android:maxLength="1"
                    android:outlineProvider="background"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_otp_et_otp2"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/background_boxes_otp_activity"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="auto"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_otp_et_otp3"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/background_boxes_otp_activity"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="auto"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_otp_et_otp4"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/background_boxes_otp_activity"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="auto"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_otp_et_otp5"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/background_boxes_otp_activity"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="auto"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/activity_otp_et_otp6"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/background_boxes_otp_activity"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="auto"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_otp_et_tv1_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didn_t_receive_the_otp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/activity_otp_et_tv2_resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/resend_otp"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_otp_et_tv2_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_otp_btn_verify"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="30dp"
                android:background="@drawable/background_button"
                android:gravity="center"

                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
